--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,6 +1,6 @@
-@use '../scss' as *;
+@use "../scss" as *;
 
-header{
+header {
   background: white;
   display: block;
   top: 0;
@@ -9,12 +9,12 @@ header{
   width: 100%;
   text-align: center;
   z-index: 999;
-  
-  & .container{
+
+  & .container {
     flex-flow: column;
     height: 100%;
 
-    & .logo{
+    & .logo {
       // width: 100%;
       // display: flex;
       // justify-content: center;
@@ -26,9 +26,9 @@ header{
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      transition: all .2s;
-  
-      & a{
+      transition: all 0.2s;
+
+      & a {
         font-size: 1.75rem;
         text-align: center;
         font-weight: bold;
@@ -37,7 +37,7 @@ header{
       }
     }
 
-    & .nav-menu-icon{
+    & .nav-menu-icon {
       position: relative;
       display: none;
       width: 24px;
@@ -45,7 +45,7 @@ header{
       margin-top: 2rem;
     }
 
-    & nav.menu{
+    & nav.menu {
       width: 100%;
       display: flex;
       justify-content: center;
@@ -54,19 +54,19 @@ header{
       position: absolute;
       right: 50%;
       transform: translateX(50%);
-      transition: all .2s;
+      transition: all 0.2s;
       margin-top: 5rem;
-      
-      & a:hover{
+
+      & a:hover {
         color: lightgrey;
       }
-  
-      & ul{
+
+      & ul {
         display: flex;
         margin: 0;
         padding: 0;
-  
-        & li{
+
+        & li {
           list-style: none;
           margin: 1rem;
         }
@@ -74,22 +74,22 @@ header{
     }
   }
 
-  &.fix{
+  &.fix {
     position: fixed;
     height: 90px;
 
-    & .container{
+    & .container {
       flex-direction: row;
       justify-content: space-between;
 
-      & .logo{
+      & .logo {
         width: auto;
         transform: translateX(0);
         left: 0;
         position: relative;
       }
 
-      & nav.menu{
+      & nav.menu {
         width: auto;
         position: relative;
         margin-top: 27px;
@@ -101,15 +101,15 @@ header{
 }
 
 @media screen and (max-width: 992px) {
-  header{
+  header {
     height: 90px;
 
-    & .container{
+    & .container {
       flex-flow: row;
       justify-content: space-between;
       align-items: center;
 
-      & .logo{
+      & .logo {
         display: flex;
         position: relative;
         left: inherit;
@@ -117,11 +117,11 @@ header{
         margin: 0;
       }
 
-      & .nav-menu-icon{
+      & .nav-menu-icon {
         display: flex;
         margin-top: 0;
 
-        & a{
+        & a {
           width: 100%;
           display: flex;
           align-items: center;
@@ -129,65 +129,65 @@ header{
           line-height: normal;
           z-index: 10;
 
-          &:hover{
-            & i::before{
+          &:hover {
+            & i::before {
               margin-top: -10px;
             }
-            & i::after{
+            & i::after {
               margin-top: 10px;
             }
           }
 
-          &.active{
-
-            &:hover{
-              & i::before{
+          &.active {
+            &:hover {
+              & i::before {
                 margin-top: -7px;
               }
-              & i::after{
+              & i::after {
                 margin-top: 7px;
               }
             }
 
-            & i::before{
+            & i::before {
               bottom: 0;
               -webkit-transform: rotateZ(45deg);
               transform: rotateZ(45deg);
             }
-            & i{
+            & i {
               background: none;
             }
-            & i::after{
+            & i::after {
               bottom: 0;
               -webkit-transform: rotateZ(-45deg);
               transform: rotateZ(-45deg);
             }
           }
 
-          & i, i::before, i::after{
-            content: ' ';
+          & i,
+          i::before,
+          i::after {
+            content: " ";
             height: 3px;
             width: 24px;
             background: black;
             display: block;
             position: absolute;
             left: 0;
-            transition: all .2s ease-out;
-            -webkit-transition: all .2s ease-out;
+            transition: all 0.2s ease-out;
+            -webkit-transition: all 0.2s ease-out;
           }
 
-          & i::before{
+          & i::before {
             margin-top: -7px;
           }
-          
-          & i::after{
+
+          & i::after {
             margin-top: 7px;
           }
-
         }
       }
 
-      & nav.menu{
+      & nav.menu {
         background: white;
         width: 100%;
         height: 100vh;
@@ -198,20 +198,20 @@ header{
         margin: 0;
         z-index: 9;
         transform: translateY(-100%);
-        transition: all .6s cubic-bezier(.05,1,.69,.99);
-        -webkit-transition: all .6s cubic-bezier(.05,1,.69,.99);
+        transition: all 0.6s cubic-bezier(0.05, 1, 0.69, 0.99);
+        -webkit-transition: all 0.6s cubic-bezier(0.05, 1, 0.69, 0.99);
 
-        &.show{
+        &.show {
           transform: translateY(0%);
         }
 
-        & ul{
+        & ul {
           flex-direction: column;
-    
-          & li{
+
+          & li {
             list-style: none;
             margin: 2rem;
-            & a{
+            & a {
               font-weight: 400;
               font-size: 2rem;
               letter-spacing: 3px;
@@ -221,18 +221,16 @@ header{
       }
     }
 
-    &.fix{
-
-      & .container{
-
-        & nav.menu{
+    &.fix {
+      & .container {
+        & nav.menu {
           position: absolute;
           margin: 0;
           transform: translateY(-100%);
-          transition: transform .6s cubic-bezier(.05,1,.69,.99);
-          -webkit-transition: transform .6s cubic-bezier(.05,1,.69,.99);
+          transition: transform 0.6s cubic-bezier(0.05, 1, 0.69, 0.99);
+          -webkit-transition: transform 0.6s cubic-bezier(0.05, 1, 0.69, 0.99);
 
-          &.show{
+          &.show {
             transform: translateY(0%);
           }
         }
